# cupcat

./: .editorconfig  .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  bunfig.toml  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: package.json
apps/bridge/: package.json  tsconfig.json
apps/bridge/src/: agent-chat.ts  agent-instructions.ts  align.test.ts  align.ts  beats.ts  brandkit.ts  cdp.ts  changelog.test.ts  changelog.ts  chapters.test.ts  chapters.ts  chats.ts  claude-code.ts  cli.ts  clips.ts  config.ts  diarize.ts  emphasis.test.ts  emphasis.ts  enhance.ts  executor.ts  export.ts  faceblur.test.ts  faceblur.ts  feedback.ts  ffmpeg.ts  grade.test.ts  grade.ts  higgsfield.ts  index.ts  jobs.test.ts  mcp-http.ts  mcp-tools.ts  media.ts  memory.ts  motion.ts  multicam.ts  openers.test.ts  openers.ts  pathmask.ts  (+25 more)
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: installer.nsi
apps/desktop/src-tauri/src/: main.rs
apps/faces/: Cargo.toml
apps/faces/src/: main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/editor/: ChatPanel.tsx  ChromaKeyLayer.tsx  CommandPalette.tsx  EditorApp.tsx  Inspector.tsx  JobBar.tsx  KeyframeCurveEditor.test.ts  KeyframeCurveEditor.tsx  LanguageGate.tsx  MediaPanel.tsx  NumberField.tsx  Onboarding.tsx  (+33 more)
docs/: RELEASE-1.7.0.md  SHA256-1.7.0.txt
(+2 files in other folders)
