[package]
name = "cupcat"
version = "0.1.0"
description = "CupCat — AI-native video editor"
authors = ["CupCat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
